<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/cg_filters"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/et_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:inputType="number"
            android:hint="@string/grid_size"
            android:gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/btn_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/btn_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw"/>
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/iv_canvas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_top" >
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_monochrome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monochrome"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_haze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haze"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_sepia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sepia_tone"
            android:checked="true"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_inversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_inversion"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_crosshatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crosshatch"
            android:checked="true"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_pixellate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pixellate"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_sketch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sketch"/>
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/chip_toon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toon"/>
    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:id="@+id/iv_canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_filters" />

</androidx.constraintlayout.widget.ConstraintLayout>